Fix body and navbar overlap

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,8 @@
+.main {
+  position: relative;
+  margin-top: 5%;
+}
+
 header * {
   margin: 0; padding: 0;
   box-sizing: border-box;
